--- a/research_es.html
+++ b/research_es.html
@@ -143,7 +143,14 @@
     </div></div>
 
     <br/><div class="cv">
-    <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;On the Complexity of the Plantinga-Vegter Algorithm<a class="btn btn-arxiv" href="https://arxiv.org/abs/2004.06879" role="button">arXiv:2004.06879</a></h4></div>
+    <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
+     <div class="pretalktitle"></div><div class="collaborator">(Junto con <a href="https://who.paris.inria.fr/Elias.Tsigaridas/index.html">Elias Tsigaridas</a>)</div>
+     <div class="pretalktitle"></div><div class="collaborator">Aceptado en ISSAC'20.</div>
+     <!--<div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto and E. Tsigaridas. Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces. In <i>Proceedings of the 2020 on International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'20, páginas xyz-XYZ. ACM, New York, 2020. <span><a href="https://doi.org/10.1145/3373207.3404054">DOI 10.1145/3373207.3404054</a></span></div>-->
+    </div>
+
+    <br/><div class="cv">
+    <div class="year"></div><div class="paper"><h4>&emsp;On the Complexity of the Plantinga-Vegter Algorithm<a class="btn btn-arxiv" href="https://arxiv.org/abs/2004.06879" role="button">arXiv:2004.06879</a></h4></div>
      <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> and <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a>)</div>
      <div class="pretalktitle"></div><div class="collaborator">Este es una versión para revista de <em>Plantinga-Vegter algorithm takes average polynomial time</em>.</div>
     </div>
@@ -165,7 +172,7 @@
 
     <br/><div class="cv">
     <div class="year"></div><div class="paper"><h4>&emsp;Plantinga-Vegter algorithm takes average polynomial time<a class="btn btn-arxiv" href="https://arxiv.org/abs/1901.09234"  role="button">arXiv:1901.09234</a></h4></div>
-     <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r y J. Tonelli-Cueto. Plantinga-Vegter Algorithm takes Average Polynomial Time (Inglés) [El algoritmo de Plantinga-Vegter toma tiempo medio polinómico]. In <i>Proceedings of the 2019 on International Symposium on Symbolic and Algebraic Computation</i>, <a href="#ISSAC2019">ISSAC'19</a>, pages 114-121. ACM, New York, 2019. <span><a href="https://doi.org/10.1145/3326229.3326252">DOI 10.1145/3326229.3326252</a></span></div>
+     <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r y J. Tonelli-Cueto. Plantinga-Vegter Algorithm takes Average Polynomial Time (Inglés) [El algoritmo de Plantinga-Vegter toma tiempo medio polinómico]. In <i>Proceedings of the 2019 on International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'19, páginas 114-121. ACM, New York, 2019. <span><a href="https://doi.org/10.1145/3326229.3326252">DOI 10.1145/3326229.3326252</a></span> <span><a href="https://dl.acm.org/doi/10.1145/3326229.3326252?cid=99659444592">[Author-ized link]</a></span></div>
     </div>
 
     <br/><div class="cv">
