--- a/cv.html
+++ b/cv.html
@@ -438,7 +438,14 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;On the Complexity of the Plantinga-Vegter Algorithm<a class="btn btn-arxiv" href="https://arxiv.org/abs/2004.06879" role="button">arXiv:2004.06879</a></h4></div>
+      <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
+       <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://who.paris.inria.fr/Elias.Tsigaridas/index.html">Elias Tsigaridas</a>)</div>
+       <div class="pretalktitle"></div><div class="collaborator">Accepted at ISSAC'20.</div>
+       <!--<div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto and E. Tsigaridas. Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces. In <i>Proceedings of the 2020 on International Symposium on Symbolic and Algebraic Computation</i>, <a href="#ISSAC2020">ISSAC'20</a>, pages xyz-XYZ. ACM, New York, 2020. <span><a href="https://doi.org/10.1145/3373207.3404054">DOI 10.1145/3373207.3404054</a></span></div>-->
+      </div>
+
+      <br/><div class="cv">
+      <div class="year"><h4></h4></div><div class="paper"><h4>&emsp;On the Complexity of the Plantinga-Vegter Algorithm<a class="btn btn-arxiv" href="https://arxiv.org/abs/2004.06879" role="button">arXiv:2004.06879</a></h4></div>
        <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> and <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a>)</div>
        <div class="pretalktitle"></div><div class="collaborator">This is a journal version of <em>Plantinga-Vegter algorithm takes average polynomial time</em>.</div>
       </div>
@@ -461,7 +468,7 @@
 
       <br/><div class="cv">
       <div class="year"></div><div class="paper"><h4>&emsp;Plantinga-Vegter algorithm takes average polynomial time<a class="btn btn-arxiv" href="https://arxiv.org/abs/1901.09234"  role="button">arXiv:1901.09234</a></h4></div>
-       <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r and J. Tonelli-Cueto. Plantinga-Vegter Algorithm takes Average Polynomial Time. In <i>Proceedings of the 2019 on International Symposium on Symbolic and Algebraic Computation</i>, <a href="#ISSAC2019">ISSAC'19</a>, pages 114-121. ACM, New York, 2019. <span><a href="https://doi.org/10.1145/3326229.3326252">DOI 10.1145/3326229.3326252</a></span></div>
+       <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r and J. Tonelli-Cueto. Plantinga-Vegter Algorithm takes Average Polynomial Time. In <i>Proceedings of the 2019 on International Symposium on Symbolic and Algebraic Computation</i>, <a href="#ISSAC2019">ISSAC'19</a>, pages 114-121. ACM, New York, 2019. <span><a href="https://doi.org/10.1145/3326229.3326252">DOI 10.1145/3326229.3326252</a></span> <span><a href="https://dl.acm.org/doi/10.1145/3326229.3326252?cid=99659444592">[Author-ized link]</a></span></div>
       </div>
 
       <br/><div class="cv">
@@ -499,7 +506,12 @@
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
          <br/><div class="cv">
-         <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;<a href="#milestoneseinstein2020">Milestones Conference of the Thematic Einstein Semester on Algebraic Geometry</a></h4></div>
+         <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2020">45th International Symposium on Symbolic and Algebraic Computations (ISSAC 2020)</a><!--<span style="float:right;"><a href="pdf/ISSAC20_slides.pdf">Slides</a></span>--></h4></div>
+           <div class="pretalktitle"></div><div class="talktitle">Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</div>
+         </div>
+
+         <br/><div class="cv">
+         <div class="year"></div><div class="title"><h4>&emsp;<a href="#milestoneseinstein2020">Milestones Conference of the Thematic Einstein Semester on Algebraic Geometry</a></h4></div>
            <div class="pretalktitle"></div><div class="talktitle">Beyond Gaussians in the probabilistic analysis of condition numbers in algebraic geometry</div>
          </div>
 
@@ -1166,13 +1178,32 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <!-- To come
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
+<span id="ISSAC2020"></span>
+<br/><div class="cv">
+<div class="year">
+<h4>2020</h4>
+</div><div class="title">
+<h4>&emsp;<a href="http://issac-conference.org/2020/">45th International Symposium on Symbolic and Algebraic Computations (ISSAC 2020)</a></h4></div>
+  <div class="property">Organizer:</div><div class="value">	Ioannis Z. Emiris and Lihong Zhi (General Chairs) &ndash; <button onclick="show(1902)">Show/Hide list</button></div><div style="display:none;" id="ISSAC2020org">
+  <div class="property"></div><div class="value">Anton Leykin (Program Committee Chair)</div>
+  <div class="property"></div><div class="value">Ilias S. Kotsireas (Local Arrangements Chair)</div>
+  <div class="property"></div><div class="value">Christos Konaxis (Treasurer)</div>
+  <div class="property"></div><div class="value">Angelos Mantzaflaris (Proocedings Editor)</div>
+  <div class="property"></div><div class="value">François Lemaire (Publicity Chair)</div>
+  <div class="property"></div><div class="value">Wen-Shin Lee (Tutorial Chair)</div>
+  <div class="property"></div><div class="value">Jonathan Hauenstein (Software Presentations Chair)</div>
+  <div class="property"></div><div class="value">J. Maurice Rojas (Poster Chair)</div></div>
+  <div class="property">Location:</div><div class="value">Kalamata, Greece</div>
+  <div class="property">Date:</div><div class="value">20th to 23rd of July of 2020</div>
+</div>
+
 <!-- 2020
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
 <span id="milestoneseinstein2020"></span>
 <br/><div class="cv">
 <div class="year">
-  <h4>2020</h4>
+
 </div><div class="title">
 <h4>&emsp;<a href="http://ehrhart.math.fu-berlin.de/agplus/milestone.php">Milestones Conference of the Thematic Einstein Semester on Algebraic Geometry</a></h4></div>
   <div class="property">Organizer:</div><div class="value">Matías Bender and Peter B&uuml;rgisser</div>
@@ -2098,6 +2129,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
     <script type="text/javascript">
     function show(y) {
       if (y === 1901){var x = document.getElementById("ISSAC2019org");}
+      if (y === 1902){var x = document.getElementById("ISSAC2020org");}
       if (x.style.display === "none") {
         x.style.display = "block";
       } else {
