--- a/research.html
+++ b/research.html
@@ -142,7 +142,8 @@
   </div></div>
 
   <br/><div class="cv">
-  <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
+  <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
+  <div class="year"></div><div class="paper"><h4>&emsp;I: Univariate Polynomials and Hypersurfaces</h4></div>
    <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://who.paris.inria.fr/Elias.Tsigaridas/index.html">Elias Tsigaridas</a>)</div>
    <div class="pretalktitle"></div><div class="collaborator">Accepted at ISSAC'20.</div>
    <!--<div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto and E. Tsigaridas. Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces. In <i>Proceedings of the 2020 on International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'20, pages xyz-XYZ. ACM, New York, 2020. <span><a href="https://doi.org/10.1145/3373207.3404054">DOI 10.1145/3373207.3404054</a></span></div>-->
