--- a/cv_es.html
+++ b/cv_es.html
@@ -490,6 +490,7 @@
 
          <br/><div class="cv">
          <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2020">45th International Symposium on Symbolic and Algebraic Computations (ISSAC 2020)</a><!--<span style="float:right;"><a href="pdf/ISSAC20_slides.pdf">Slides</a></span>--></h4></div>
+         <div class="property"></div><div class="value"><em>(Ponencia on-line por la pandemia del COVID-19)</em></div>
            <div class="pretalktitle"></div><div class="talktitle">Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</div>
          </div>
 
@@ -1193,6 +1194,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
   <div class="property"></div><div class="value">J. Maurice Rojas (Poster Chair)</div></div>
   <div class="property">Lugar:</div><div class="value">Kalamata, Grecia</div>
   <div class="property">Fecha:</div><div class="value">del 20 al 23 de julio del 2020</div>
+  <div class="property">Nota:</div><div class="value">On-line por la pandemia del COVID-19</div>
 </div>
 
 <!-- 2020
@@ -2028,7 +2030,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
            <div class="property"><em>Castellano</em>:</div><div class="value">Native</div>
            <div class="property"><em>Inglés</em>:</div><div class="value">C1</div>
            <div class="property"><em>Euskera</em>:</div><div class="value">A2-B1</div>
-           <div class="property"><em>Alemán</em>:</div><div class="value">A2-B1</div>
+           <div class="property"><em>Alemán</em>:</div><div class="value">A2</div>
          </div>
 
       <br/><p style="text-align:justify;"><small>
