--- a/cv.html
+++ b/cv.html
@@ -508,6 +508,7 @@
 
          <br/><div class="cv">
          <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2020">45th International Symposium on Symbolic and Algebraic Computations (ISSAC 2020)</a><!--<span style="float:right;"><a href="pdf/ISSAC20_slides.pdf">Slides</a></span>--></h4></div>
+           <div class="property"></div><div class="value"><em>(On-line talk due to the COVID-19 pandemic)</em></div>
            <div class="pretalktitle"></div><div class="talktitle">Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</div>
          </div>
 
@@ -1196,6 +1197,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
   <div class="property"></div><div class="value">J. Maurice Rojas (Poster Chair)</div></div>
   <div class="property">Location:</div><div class="value">Kalamata, Greece</div>
   <div class="property">Date:</div><div class="value">20th to 23rd of July of 2020</div>
+  <div class="property">Note:</div><div class="value">On-line due to the COVID-19 pandemic</div>
 </div>
 
 <!-- 2020
@@ -2002,7 +2004,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
            <div class="property"><em>Spanish</em>:</div><div class="value">Native</div>
            <div class="property"><em>English</em>:</div><div class="value">C1</div>
            <div class="property"><em>Basque</em>:</div><div class="value">A2-B1</div>
-           <div class="property"><em>German</em>:</div><div class="value">A2-B1</div>
+           <div class="property"><em>German</em>:</div><div class="value">A2</div>
          </div>
 
       <br/><p style="text-align:justify;"><small>
