--- a/cv.html
+++ b/cv.html
@@ -2023,10 +2023,11 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
      </div></div>
 
      <ul style="list-style-type:none;">
-      <li><a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/prof_dr_peter_buergisser/" style="font-weight: bold;">Peter B&uuml;rgisser</a>, <em>pbuerg_AT_math.tu-berlin.de</em>, Technische Universit&auml;t Berlin.</li>
-      <li><a href="https://www.cityu.edu.hk/ma/people/profile/cuckerf.htm" style="font-weight: bold;">Felipe Cucker</a>, <em>macucker_AT_cityu.edu.hk, CityU Hong Kong.</li>
-      <li><a href="http://alpergur.xyz/" style="font-weight: bold;">Alperen Ali Erg&uuml;r</a>, <em>aergur_AT_cs.cmu.edu</em>, Carnegie Mellon University.</li>
-      <li><a href="http://www.ehu.eus/~mtwmastm/" style="font-weight: bold;">Marta Macho-Stadler</a>, <em>marta.macho_AT_ehu.eus</em>, University of the Basque Country.</li>
+       <li><a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/prof_dr_peter_buergisser/" style="font-weight: bold;">Peter B&uuml;rgisser</a>, <em>pbuerg_AT_math.tu-berlin . de</em>, Technische Universit&auml;t Berlin.</li>
+       <li><a href="https://www.cityu.edu.hk/ma/people/profile/cuckerf.htm" style="font-weight: bold;">Felipe Cucker</a>, <em>macucker_AT_cityu.edu . hk, CityU Hong Kong.</li>
+       <li><a href="http://alpergur.xyz/" style="font-weight: bold;">Alperen Ali Erg&uuml;r</a>, <em>aergur_AT_cs.cmu . edu</em>, Carnegie Mellon University.</li>
+       <li><a href="http://www.ehu.eus/~mtwmastm/" style="font-weight: bold;">Marta Macho-Stadler</a>, <em>marta.macho_AT_ehu . eus</em>, Universidad del País Vasco.</li>
+       <li><a href="https://who.paris.inria.fr/Elias.Tsigaridas/index.html" style="font-weight: bold;">Elias Tsigaridas</a>, <em>elias.tsigaridas_AT_inria . fr</em>, Inria Paris & IMJ-PRG.</li>
      </ul>
 
   </div>
