--- a/aboutme.html
+++ b/aboutme.html
@@ -110,6 +110,9 @@
   <p>
   In 2020, I started a postdoc at INRIA Paris and the IMJ-PRG under the mentorship of Fabrice Rouillier and Elias Tsigaridas.
   </p>
+  <h3>Math Genealogy</h3>
+  <p>You can research my mathematical academic ancestors and relatives through the Math Genealogy Project.</p>
+  <p style="text-align:center"><a class="btn btn-MGP" href="https://www.genealogy.math.ndsu.nodak.edu/id.php?id=256775" role="button">Math Genealogy Project ID: 256775</a></p>
 </div>
 
 <footer>
