--- a/aboutme_es.html
+++ b/aboutme_es.html
@@ -111,6 +111,9 @@
   <p>
     En 2020, empecé un postdoc en INRIA Paris y el IMJ-PRG, siendo mis mentores Fabrice Rouillier y Elias Tsigaridas.
   </p>
+  <h3>Genealogía matemática</h3>
+  <p>Puedes investigar mes ancestres y familiares matemátiques académiques en el Math Genealogy Project.</p>
+  <p style="text-align:center"><a class="btn btn-MGP" href="https://www.genealogy.math.ndsu.nodak.edu/id.php?id=256775" role="button">Math Genealogy Project ID: 256775</a></p>
 </div>
 
 <footer>
