--- a/cv_es.html
+++ b/cv_es.html
@@ -424,7 +424,7 @@
       </div></div>
 
       <br/><div class="row"><div class="col-md-12">
-      <h3>Preprints <a class="btn btn-arxiv" href="arXiv.html" Labor="button"><i class="ai ai-arxiv-square"></i> Lista de preprints de arXiv</a></h3>
+      <h3>Preprints <a class="btn btn-arxiv" href="arXiv.html" Labor="button"><i class="ai ai-arxiv-square"></i>Preprints en arXiv</a></h3>
       </div></div>
 
       <br/><div class="cv">
