--- a/cv_es.html
+++ b/cv_es.html
@@ -604,11 +604,19 @@
       </div></div>
 
       <br/><div class="cv">
+      <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;Seminar of the OURAGAN team of Inria Paris<span style="float:right;"><a href="pdf/OURAGAN30062020_slides.pdf">Slides</a></span></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</div>
+        <div class="property">Institución:</div><div class="value"><a href="">Inria Paris</a></div>
+        <div class="property">Lugar:</div><div class="value">Par&iacute;s, Francia (On-line)</div>
+        <div class="property">Lugar:</div><div class="value">30 de junio del 2020</div>
+      </div>
+
+      <br/><div class="cv">
       <div class="year"><h4>2019</h4></div><div class="title"><h4>&emsp;<a href="https://sites.google.com/site/bilbaoalgebraseminar/">Seminar of the &ldquo;Groups, Topology and Applications&rdquo; Research Group of the UPV/EHU</a></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">Computing the Homology of Semialgebraic Sets in Weak Exponential Time</div>
         <div class="property">Institución:</div><div class="value"><a href="https://www.ehu.eus/en/">Universidad del País Vasco (UPV/EHU)</a></div>
         <div class="property">Lugar:</div><div class="value">Leioa, España</div>
-        <div class="property">Fecha:</div><div class="value">2 de mayo del 2019</div>
+        <div class="property">Lugar:</div><div class="value">2 de mayo del 2019</div>
       </div>
 
       <br/><div class="cv">
