--- a/cv.html
+++ b/cv.html
@@ -623,6 +623,14 @@
       </div></div>
 
       <br/><div class="cv">
+      <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;Seminar of the OURAGAN team of Inria Paris<span style="float:right;"><a href="pdf/OURAGAN30062020_slides.pdf">Slides</a></span></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</div>
+        <div class="property">Institution:</div><div class="value"><a href="">Inria Paris</a></div>
+        <div class="property">Location:</div><div class="value">Paris, France (On-line)</div>
+        <div class="property">Date:</div><div class="value">30th of June of 2020</div>
+      </div>
+
+      <br/><div class="cv">
       <div class="year"><h4>2019</h4></div><div class="title"><h4>&emsp;<a href="https://sites.google.com/site/bilbaoalgebraseminar/">Seminar of the &ldquo;Groups, Topology and Applications&rdquo; Research Group of the UPV/EHU</a></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">Computing the Homology of Semialgebraic Sets in Weak Exponential Time</div>
         <div class="property">Institution:</div><div class="value"><a href="https://www.ehu.eus/en/">University of the Basque Country (UPV/EHU)</a></div>
