--- a/contact.html
+++ b/contact.html
@@ -82,10 +82,11 @@
      <h3>Dr. Josu&eacute; Tonelli-Cueto</h3>
 <p></p>
      <p align="left">
-<b>IMJ-PRG</b><br/>
-Sorbonne Universite<br/>Campus Pierre et Marie Curie<br/>
+<b>Institut de Mathematiques de Jussieu - Paris Rive Gauche</b><br/>
+Sorbonne Universite - Campus Pierre et Marie Curie<br/>
+Boite Courrier 247<br/>
 4, place Jussieu<br/>
-75252 Paris<br/>
+75252 Paris Cedex 05<br/>
 FRANCE
 </p>
 <p align="left">
