--- a/cv_es.html
+++ b/cv_es.html
@@ -496,7 +496,7 @@
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
          <br/><div class="cv">
-         <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2020">45th International Symposium on Symbolic and Algebraic Computations (ISSAC 2020)</a><!--<span style="float:right;"><a href="pdf/ISSAC20_slides.pdf">Slides</a></span>--></h4></div>
+         <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2020">45th International Symposium on Symbolic and Algebraic Computations (ISSAC 2020)</a><span style="float:right;"><a href="pdf/ISSAC20_slides.pdf">Slides</a></span></h4></div>
            <div class="pretalktitle"></div><div class="talktitle">Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</div>
            <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Ponencia on-line por la pandemia del COVID-19)</div>
          </div>
