--- a/contact_es.html
+++ b/contact_es.html
@@ -82,12 +82,13 @@
      <h3>Dr. Josu&eacute; Tonelli Cueto</h3>
 <p></p>
      <p align="left">
-       <b>IMJ-PRG</b><br/>
-       Sorbonne Universite<br/>Campus Pierre et Marie Curie<br/>
+       <b>Institut de Mathematiques de Jussieu - Paris Rive Gauche</b><br/>
+       Sorbonne Universite - Campus Pierre et Marie Curie<br/>
+       Boite Courrier 247<br/>
        4, place Jussieu<br/>
-       75252 Paris<br/>
-       FRANCIA
-</p>
+       75252 Paris Cedex 05<br/>
+       FRANCE
+       </p>
 <p align="left">
 Habitaci&oacute;n 15-16.414
 </p>
